[package]
name = "expect-tests"
version = "0.1.1"
description = "(A better) minimalistic snapshot testing library"
keywords = ["snapshot", "testing", "expect"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awesomelemonade/expect-tests"
authors = ["awesomelemonade"]
edition = "2021"

exclude = ["./github"]

[dependencies]
once_cell = "1"
dissimilar = "1"